--- a/css/main.css
+++ b/css/main.css
@@ -86,10 +86,11 @@ tr, th, td {
 }
 
 .h1-content-title {
-    margin-top: 250px;
-    position: fixed;
+    margin-top: 50px;
+    position: relative;
     color: rgb(255, 165, 91);
     font-size: 50px;
+    z-index: -1;
 }
 
 .content-event {
@@ -99,11 +100,18 @@ tr, th, td {
     margin-top: 30px;
 }
 
+.content-submenu-event {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+}
+
 .side-content-event {
     display: flex;
     justify-content: right;
     align-items: right;
-    margin-top: 120px;
+    margin-top: 0px;
     margin-right: 90px;
     border-radius: 10px;
 }
@@ -126,6 +134,8 @@ tr, th, td {
 .label-edit-event {
     color: orange;
     font-size: 20px;
+    padding: 10px;
+    margin: 5px 20px 20px;
 }
 
 .input-edit-event {
@@ -133,14 +143,18 @@ tr, th, td {
     height: 30px;
     margin: 10px;
     font-size: 20px;
+    padding: 10px;
+    margin: 5px 20px 20px;
 }
 
 .ta-edit-event {
-    width: 540px;
+    width: 580px;
     height: 100px;
     margin-right: 10px;
     margin-top: 20px;   
     font-size: 20px;
+    padding: 10px;
+    margin: 10px 30px 20px;
 }
 
 .btn-edit-event {
@@ -165,6 +179,8 @@ tr, th, td {
 .label-add-event {
     color: orange;
     font-size: 20px;
+    padding: 10px;
+    margin: 5px 20px 20px;
 }
 
 .input-add-event {
@@ -172,14 +188,18 @@ tr, th, td {
     height: 30px;
     margin: 10px;
     font-size: 20px;
+    padding: 10px;
+    margin: 5px 20px 20px;
 }
 
 .ta-add-event {
-    width: 540px;
+    width: 580px;
     height: 100px;
     margin-right: 10px;
     margin-top: 20px;   
     font-size: 20px;
+    padding: 10px;
+    margin: 10px 30px 20px;
 }
 
 .btn-add-event {
