--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,43 @@
-body {
-    background-color: #001247;
+/* Main */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-header{
+html, body {
+    height: 100%;
+}
+
+body {
+    background-color: #001247;
+    font-family: "Inria Sans", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    display: flex;
+    flex-direction: column;
+}
+
+a {
+    font-weight: bold;
+    color: black;
+    display: inline-block;
+    text-decoration: none;
+    font-family: "Inria Sans", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+
+.clearfix {
+    clear: both;
+}
+
+
+
+
+
+/* Header */
+header {
     display: flex;
     position: fixed;
     top: 0;
@@ -10,90 +45,110 @@ header{
     width: 100%;
     height: 100px;
     background-color: white;
+    z-index: 10;
 }
-.containerLogo{
+
+.containerLogo {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     margin-left: 20px;
 }
-.logo{
 
-    width:80px;
+.logo {
+    width: 80px;
     height: auto;
 }
 
-.nav,.nav-kiri,.nav-kanan{
+.nav,
+.nav-kiri,
+.nav-kanan {
     display: flex;
     align-items: center;
     padding-right: 10px;
-    width: 100% ;
+    width: 100%;
 }
 
-.nav-kiri{
+.nav-kiri {
+    padding-left: 10px;
     justify-content: flex-start;
 }
 
-.nav-kanan{
+.nav-kanan {
     justify-content: flex-end;
     width: -moz-fit-content;
-    width: -moz-fit-content; /* Add this line to support Firefox */
-    width: fit-content; /* Add this line to support Firefox */
+    width: fit-content;
+    flex: 1;
 }
 
-.nav-kanan>*{
+.nav-kanan > * {
     display: block;
 }
 
-.navbar{
-    margin: 10px;
-    padding:10px 10px;
-}
-
-.navbar:hover{
-    border-radius: 10px;
-    border-right: 4px solid red;
-    border-bottom: 4px solid red;
-    background-color: #80808075;
-}
-
-a{
+.btn-login {
+    padding: 10px 20px;
+    background-color: orange;
     color: black;
-    display: block;
-    text-decoration: none;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    font-family: "Inria Sans", sans-serif;
+    font-weight: 700;
+    font-style: normal;
 }
 
-.tableEvent {
-    width: 90%;
-    border: 2px solid white;
-    border-collapse: collapse;
+.navbar {
+    margin: 10px;
+    padding: 10px 10px;
 }
 
-tr, th, td {
-    border: 2px solid white;
-    padding: 10px;
-    color: rgb(255, 127, 47);
-    text-align: center;
-    width: auto;
-    height: 100px;
+.navbar:hover {
+    border-radius: 10px;
+    color: darkred;
+}
+
+
+
+
+
+/* Body */
+.video-container {
+    width: 100%;
+    margin-top: 75px;
+    z-index: 1;
+    position: relative;
+    margin-bottom: 0px;
+}
+main.content {
+    flex: 1;
+}
+
+.content {
+    margin-bottom: 100px;
+    margin-top: 130px;
+}
+
+.content-home {
+    margin-bottom: 100px;
+    margin-top: 50px;
 }
 
 .content-title {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 80px;
 }
 
 .h1-content-title {
-    margin-top: 50px;
     position: relative;
     color: rgb(255, 165, 91);
     font-size: 50px;
     z-index: -1;
 }
 
-.content-page {
+.content-page,
+.content-submenu-page {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -101,9 +156,6 @@ tr, th, td {
 }
 
 .content-submenu-page {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     margin-top: 100px;
 }
 
@@ -116,14 +168,60 @@ tr, th, td {
     border-radius: 10px;
 }
 
+.tableEvent {
+    width: 90%;
+    border: 2px solid white;
+    border-collapse: collapse;
+}
+
+tr,
+th,
+td {
+    border: 2px solid white;
+    padding: 10px;
+    color: rgb(255, 127, 47);
+    text-align: center;
+    width: auto;
+    height: 100px;
+}
+
+.btn-add-ev,
+.btn-edit-event,
+.btn-add-event,
+.btn-add-team {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    background-color: orange;
+    color: black;
+    border: none;
+    border-radius: 10px;
+    font-family: "Inria Sans", sans-serif;
+    font-weight: 700;
+    font-style: bold;
+}
+
 .btn-add-ev {
     width: 100px;
     height: 40px;
-    font-size: 20px;
-    background-color: orange;
-    color: white;
-    border: none;
-    border-radius: 10px;
+}
+
+.btn-edit-event,
+.btn-add-event {
+    width: 170px;
+    height: 40px;
+    margin: 20px auto;
+}
+
+.btn-add-event {
+    width: 150px;
+}
+
+.btn-add-team {
+    width: 150px;
+    height: 40px;
+    margin: 50px auto;
 }
 
 .td-event-edit {
@@ -131,51 +229,7 @@ tr, th, td {
     text-align: center;
 }
 
-.label-edit-event {
-    color: orange;
-    font-size: 20px;
-    padding: 10px;
-    margin: 5px 20px 20px;
-}
-
-.input-edit-event {
-    width: 400px;
-    height: 30px;
-    margin: 10px;
-    font-size: 20px;
-    padding: 10px;
-    margin: 5px 20px 20px;
-}
-
-.ta-edit-event {
-    width: 580px;
-    height: 100px;
-    margin-right: 10px;
-    margin-top: 20px;   
-    font-size: 20px;
-    padding: 10px;
-    margin: 10px 30px 20px;
-}
-
-.btn-edit-event {
-    width: 170px;
-    height: 40px;
-    margin: 20px auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    background-color: orange;
-    color: white;
-    border: none;
-    border-radius: 10px;
-}
-
-.td-event-delete {
-    color: red;
-    text-align: center;
-}
-
+.label-edit-event,
 .label-add-event {
     color: orange;
     font-size: 20px;
@@ -183,6 +237,7 @@ tr, th, td {
     margin: 5px 20px 20px;
 }
 
+.input-edit-event,
 .input-add-event {
     width: 400px;
     height: 30px;
@@ -192,45 +247,134 @@ tr, th, td {
     margin: 5px 20px 20px;
 }
 
+.ta-edit-event,
 .ta-add-event {
     width: 580px;
     height: 100px;
     margin-right: 10px;
-    margin-top: 20px;   
+    margin-top: 20px;
     font-size: 20px;
     padding: 10px;
     margin: 10px 30px 20px;
 }
 
-.btn-add-event {
-    width: 150px;
-    height: 40px;
-    margin: 20px auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    background-color: orange;
-    color: white;
-    border: none;
-    border-radius: 10px;
+.td-event-delete {
+    color: red;
+    text-align: center;
 }
 
 .cmb-choose-game {
     padding: 10px;
-    margin-left: 15px; 
+    margin-left: 15px;
 }
 
-.btn-add-team {
-    width: 150px;
-    height: 40px;
-    margin: 50px auto;
+
+
+
+
+
+/* Footer */
+.footer {
+    background-color: #f0f4f8;
+    color: #333;
+    padding: 20px;
+    margin-top: auto;
+}
+
+.footer-container {
+    max-width: 100%;
+    margin: 0 80px;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    background-color: orange;
-    color: white;
-    border: none;
-    border-radius: 10px;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 200px;
+}
+
+.footer-column {
+    flex: 1;
+    min-width: 250px;
+    margin: 0;
+    padding: 0 10px;
+}
+
+.footer-column h3 {
+    font-size: 18px;
+    color: #001247;
+    margin-bottom: 10px;
+    position: relative;
+}
+
+.footer-column h3::after {
+    display: block;
+    width: 50px;
+    height: 2px;
+    background-color: #ff5722;
+    margin-top: 5px;
+}
+
+.footer-column p,
+.footer-column ul {
+    font-size: 14px;
+    line-height: 1.4;
+}
+
+.footer-column ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer-column ul li {
+    margin-bottom: 5px;
+}
+
+.footer-column ul li a {
+    color: #555;
+    text-decoration: none;
+    transition: color 0.3s;
+}
+
+.footer-column ul li a:hover {
+    color: #ff5722;
+}
+
+.footer-social {
+    display: flex;
+    gap: 15px;
+    margin-top: 10px;
+}
+
+.footer-social a img {
+    width: 24px;
+    height: 24px;
+    transition: transform 0.3s ease, filter 0.3s ease;
+}
+
+.footer-social a img:hover {
+    transform: scale(1.2);
+    filter: brightness(1.2);
+}
+
+.footer-bottom {
+    text-align: center;
+    margin-top: 20px;
+    padding-top: 10px;
+    border-top: 1px solid #ddd;
+    font-size: 14px;
+    color: #777;
+}
+
+@media (max-width: 768px) {
+    .footer-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-column {
+        text-align: center;
+        margin: 10px 0;
+    }
+
+    .footer-social {
+        justify-content: center;
+    }
 }
