--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,8 @@
     box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
     height: 100%;
 }
 
@@ -81,7 +82,7 @@ header {
     flex: 1;
 }
 
-.nav-kanan > * {
+.nav-kanan>* {
     display: block;
 }
 
@@ -120,6 +121,7 @@ header {
     position: relative;
     margin-bottom: 0px;
 }
+
 main.content {
     flex: 1;
 }
@@ -224,10 +226,11 @@ td {
     margin: 50px auto;
 }
 
-.td-event-edit{
+.td-event-edit {
     color: greenyellow;
     text-align: center;
 }
+
 .label-edit-event,
 .label-add-event {
     color: orange;
@@ -377,3 +380,9 @@ td {
         justify-content: center;
     }
 }
+
+.pagination{
+    background-color: aqua;
+}
+
+
