fix code all pages

--- a/css/main.css
+++ b/css/main.css
@@ -158,7 +158,8 @@ main.content {
 }
 
 .content-submenu-page {
-    margin-top: 100px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .side-content-event {
