--- a/css/main.css
+++ b/css/main.css
@@ -649,7 +649,6 @@ main.content {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
     z-index: 1001;
     flex-direction: column; /* Layout vertikal pada perangkat mobile */
-    overflow-y: hidden;
 }
 
 /* Sidebar: Daftar Pengguna */
@@ -780,7 +779,7 @@ main.content {
 @media (max-width: 768px) {
     .admin-chat-container {
         flex-direction: column;
-        height: 100%;
+        height: 275px;
     }
 
     .user-list {
